--- a/im-css.css
+++ b/im-css.css
@@ -30,7 +30,7 @@ blockquote:before, blockquote:after, q:before, q:after {
 }
 
 table {
-  border-collapse:collapse;`
+  border-collapse:collapse;
   /*border-spacing:0;*/
 }
 
@@ -96,47 +96,6 @@ body {
 		margin: 5px 0;
 		padding: 10px;
 	}
-}
-
-/* ---------------------- INDEX ---------------------- */
-#index {
-	width: 300px;
-	border: 1px solid #aaa;
-	border-radius: 10px;
-	background: #eee;
-	margin: 50px auto;
-	padding: 10px;
-}
-
-#index h1 {
-	color: #333;
-	margin: 0;
-	padding: 5px;
-}
-
-#index .form form label {
-	display: block;
-	margin: 20px 5px 0 0;
-	padding: 0;
-}
-
-#index .form input[type=text], #index .form input[type=password] {
-	width: 285px;
-}
-
-#index .info {
-	width: 273px;
-	border: 1px solid #ff0;
-	border-radius: 10px;
-	background: #eea;
-	color: #883;
-	margin: 10px 0;
-	padding: 10px;
-	display: block;
-}
-
-#index .form input.small {
-	width: auto;
 }
 
 /* ---------------------- TOP ---------------------- */
