Try to fix error with fonts

--- a/im-css.css
+++ b/im-css.css
@@ -466,7 +466,7 @@ body {
 /* ---------------------- ICONS ---------------------- */
 @font-face {
   font-family: 'ImIcon';
-  src: url('http://img.icymat.pl/imcss/imicons.ttf');
+  src: url('imicons.ttf');
 }
 
 .icon {
