--- a/im-css-special.css
+++ b/im-css-special.css
@@ -34,6 +34,38 @@ table {
   /*border-spacing:0;*/
 }
 
+/* ---------------------- ANIMACJE ---------------------- */
+@-webkit-keyframes cssAnimation {
+	from {
+		-webkit-transform: rotate(0deg);
+		/*opacity: 1;*/
+	}
+	to {
+		-webkit-transform: rotate(360deg);
+		/*opacity: 0;*/
+	}
+}
+@-moz-keyframes cssAnimation {
+	from {
+		-moz-transform: rotate(0deg);
+		/*opacity: 1;*/
+	}
+	to {
+		-moz-transform: rotate(360deg);
+		/*opacity: 0;*/
+	}
+}
+@-o-keyframes cssAnimation {
+	from {
+		-o-transform: rotate(0deg);
+		/*opacity: 1;*/
+	}
+	to {
+		-o-transform: rotate(360deg);
+		/*opacity: 0;*/
+	}
+}
+
 /* ---------------------- OGÓLNE ---------------------- */
 * {
 	box-sizing: border-box;
@@ -232,6 +264,10 @@ body {
 	padding: 0;
 }
 
+#menu select {
+	width: 50px;
+}
+
 #page h1 {
 	color: #333;
 	font-family: 'Arial', sans-serif;
@@ -317,6 +353,7 @@ body {
 	position: absolute;
 	display: none;
 	overflow: auto;
+	z-index: 100;
 }
 
 .select-field-parent .list div, .multiple-field-parent .list div {
@@ -499,7 +536,6 @@ body {
 	text-decoration: underline !important;
 }
 
-
 /* ---------------------- TABLES ---------------------- */
 .table, .table td {
 	/*border-collapse: collapse;*/
@@ -561,6 +597,15 @@ body {
 .icon-facebook:before { content: "\F016"; }
 .icon-facebook-text:before { content: "\F017"; }
 .icon-github:before { content: "\F018"; }
+.icon-preloader-square:before, .icon-squares:before { content: "\F019"; }
+.icon-preloader:before, .icon-circles:before { content: "\F020"; }
+.icon-qendra-logo:before { content: "\F021"; }
+
+.icon-preloader-square, .icon-preloader {
+		-webkit-animation: cssAnimation 3s infinite linear;
+		-moz-animation: cssAnimation 3s infinite linear;
+		-o-animation: cssAnimation 3s infinite linear;
+}
 
 /* ---------------------- CONTAINER ---------------------- */
 @media all and (max-width: 768px) {
