Added file field

--- a/im-css.css
+++ b/im-css.css
@@ -319,7 +319,7 @@ body {
 }
 
 /* ---------------------- FORM FIELDS ---------------------- */
-.text-field {
+.text-field, .file-field {
 	border: 1px solid #aaa;
 	border-radius: 5px;
 	font-size: 12pt;
@@ -461,6 +461,7 @@ body {
 .btn {
 	border-radius: 5px;
 	text-decoration: none !important;
+	white-space: nowrap;
 	cursor: pointer;
 }
 
